<resources>
    <string name="app_name">LocationAlarmV2</string>
    <string name="title_activity_choose_location">Location Alarm</string>
    <string name="radius_label">radius:</string>
    <string name="default_radius_value">500</string>
    <string name="radius_unit_label">m</string>

    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_every">Everyday</string>

    <string name="repeat_weekly_title">Repeat weekly</string>
    <string name="day_none">Never repeat</string>
    <string name="alarm_type">Alarm type:</string>
    <string name="alarm_tone">Alarm Tone:</string>
    <string name="select_ringtone">Select ringtone for notifications:</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notification</string>
    <string name="sound">Sound</string>
    <string name="km">km</string>

    <string name="google_app_id">locationalarmv2</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">You reached your destination</string>
    <string name="empty_alarm_list_message">Alarm list is empty. \n Click + button to add new alarm.</string>
    <string name="ok">OK</string>
    <string name="location_not_found_message">Location not found. Please set location before saving the alarm</string>
    <string name="location_not_found_title">Location not found</string>
    <string name="discard_changes">Are you sure you want to discard changes?</string>
    <string name="yes">YES</string>

</resources>
